# pixel2svgpkg

./: .gitignore  Makefile  README.md  generate_badges.py  pyproject.toml
pixel2svgpkg/: __init__.py  constants.py  py.typed  utils.py
