[tool.poetry]
name = "pixel2svgpkg"
version = "0.1.0"
description = "A Python package/fork from the pixel2svg project by Florian Berger."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/joaopalmeiro/pixel2svgpkg"
repository = "https://github.com/joaopalmeiro/pixel2svgpkg"
keywords = ["pixel2svgpkg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joaopalmeiro/pixel2svgpkg/issues"
"Twitter" = "https://twitter.com/joaompalmeiro"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}
Pillow = "^8.4.0"
svgwrite = "^1.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
bandit = "^1.7.0"
flake8-bugbear = "^21.3.1"
flake8-comprehensions = "^3.3.1"
pep8-naming = "^0.11.1"
flake8-builtins = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
